--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuepress": "^1.2.0"
   },
   "devDependencies": {
+    "@vuepress/plugin-register-components": "^1.4.0",
     "rimraf": "^3.0.0"
   }
 }
